# transcrevendo-uma-imagem-em-texto-com-aws-textract

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  response.json
ocr_lista_escolar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
